--- a/src/components/ManageBillsPage/ManageBills-styles.css
+++ b/src/components/ManageBillsPage/ManageBills-styles.css
@@ -97,7 +97,8 @@ form.manage-bills > div{
 
 form.manage-bills input{
   font-family: "Libre Franklin", Garamond, sans-serif;
-  font-size: 14px;
+  font-size: 12px;
+  line-height: 1.4em;
   background-color: white;
   color: #2a2c33;
   opacity: 0.8;
@@ -105,6 +106,7 @@ form.manage-bills input{
   border: 1px solid #c0c2c2;
   border-radius: 4px;
 }
+
 form.manage-bills input:focus{
   background-color: white;
   color: #2a2c33;
@@ -173,7 +175,7 @@ h4.bills-errors{
   background-color: #f5f5f5;
   border: none;
   opacity: 0.5;
-  font-family: "Libre Franklin Semi-Bold", Garamond, sans-serif;
+  font-family: "Libre Franklin Semi-Bold", Helvetica, sans-serif;
   border: 1px solid #c0c2c2;
   border-radius: 4px;
 }
